# policyengine-uk-v2

./: .gitignore  CHANGELOG.md  Cargo.toml  LEGISLATIVE_REFERENCE.md  Makefile  README.md  SKILL.md  build.rs  pyproject.toml
.github/workflows/: artifact-drift.yml  docs.yml  publish-pypi.yml  speedtest.yml  test.yml
benches/: axiom_child_benefit.rs  axiom_nics.rs  axiom_pension_credit.rs  axiom_reform.rs  axiom_uc.rs  branch.rs  cgt_surcharge.rs  parameter_tree.rs  reform_neutralise.rs  speedtest.rs
changelog.d/added/: agent-skill-guide.md  axiom-backend.md  branch-speedtest.md  calibration-audit.md  cgt-pensions-tax.md  cgt-residential-surcharge.md  cost-of-living-payments.md  council-tax-reduction.md  council-tax-single-person-discount.md  devolved-nations-tests.md  disability-benefit-tests-and-docs.md  dla-aa-from-flags.md  fiscal-year-2030-31.md  from-situation.md  lbtt-ltt.md  lha-rates.md  microdata-poverty-fields.md  ni-class-breakdown.md  ni-class-param-split.md  obr-growth-factor-generator.md  parameter-tree-directory-loader.md  parameter-tree-loader.md  parity-harness.md  pip-from-flags.md  python-native-extension.md  real-terms-conversion.md  reform-engine-structural.md  reform-neutralise.md  sim-axes-dynamics.md  sim-branch-comparison.md  speedtest-action.md  uc-element-extraction.md  uc-element-microdata.md  universal-credit-childcare-capital.md  yaml-test-harness.md
changelog.d/changed/: axiom-f64-parallel.md  calmar-calibration.md  growth-factors-from-2009.md  mortgage-interest-ahc.md  native-run-microdata.md  pension-self-employment-earnings-uprating.md  remove-axiom-runtime.md  require-explicit-dataset.md  state-pension-reported-passthrough.md  take-up-data-field.md  uc-award-band-targets.md
changelog.d/fixed/: calibration-warm-start.md  dataset-free-baseline-params.md  macos-wheel-architectures.md  parity-harness-hbai.md  state-pension-new-sp-recorded.md  state-pension-recorded-amount.md  wheel-platform-validation.md
data/: build_targets.py  calibrate.py  calibration_report.py  calibration_targets.json  efrs.py  efrs_model_income.py  frs.py  frs_extract.py  frs_model_income.py  gen_growth_factors.py  hbai_counterfactuals.json  hbai_counterfactuals.py  hbai_income_decomp.json  hbai_income_decomp.py  hbai_income_trend.json  hbai_income_trend.py  impute.py  income_chart.py  lha.py  pool.py  spi_topup.py  spi_unearned.py  targets.py  uprate.py
data/costings/: build_xlsx.py  classify.py  events.tsv  extract.py  extracted.json  uk_policy_costings_2016_2025.xlsx
data/targets/: 2024_25.yaml  2025_26.yaml  2026_27.yaml  2027_28.yaml  2028_29.yaml  2029_30.yaml  2030_31.yaml  TEMPLATE.yaml
docs/: calibration.json  index.html
docs/assets/: index-B7-ljPGQ.js  index-BH0BTrLC.css  index-BgvmyFO5.css  index-Bu1Dg9iV.js  index-CFciRX23.css  index-Dq7Gd88k.js  index-HLUxsiW8.js  index-qYW0_oK4.js
interfaces/python/: build_package.sh
interfaces/python/policyengine_uk_compiled/: CLAUDE.md  SKILL.md  __init__.py  data.py  engine.py  models.py  realterms.py  structural.py  yaml_tests.py
interfaces/python/tests/: test_baseline_params.py  test_from_situation.py  test_native_subprocess_parity.py  test_parity_harness.py  test_validate_wheel_artifact.py  test_yaml_policy_cases.py  test_yaml_test_runner.py
interfaces/web/: index.html
parameters/: 1994_95.yaml  1995_96.yaml  1996_97.yaml  1997_98.yaml  1998_99.yaml  1999_00.yaml  2000_01.yaml  2001_02.yaml  2002_03.yaml  2003_04.yaml  2004_05.yaml  2005_06.yaml  2006_07.yaml  2007_08.yaml  2008_09.yaml  2009_10.yaml  2010_11.yaml  2011_12.yaml  2012_13.yaml  2013_14.yaml  2014_15.yaml  2015_16.yaml  2016_17.yaml  2017_18.yaml  2018_19.yaml  2019_20.yaml  2020_21.yaml  2021_22.yaml  2022_23.yaml  2023_24.yaml  2024_25.yaml  2025_26.yaml  2026_27.yaml  2027_28.yaml  2028_29.yaml  2029_30.yaml  2030_31.yaml
reforms/: disable_means_tested.yaml
scripts/: calibration_audit.py  gen_doc_outputs.py  obr_2025_26.yaml  parity.py  pool_frs.py  refresh_artifacts.sh  replicate_real_hbai_growth.py  validate_wheel_artifact.py
scripts/build_targets/: dwp.py  hmrc.py  obr.py  ons.py
site/: doc_outputs.json  index.html  package.json  vite.config.js
site/public/: calibration.json  costings.json
site/src/: App.jsx  styles.css
site/src/components/: Code.jsx
site/src/sections/: CalibrationSection.jsx  CostingsSection.jsx  DatasetsSection.jsx  GettingStarted.jsx  ParametersSection.jsx  ResultsSection.jsx  SimulationSection.jsx  StructuralSection.jsx
src/: lib.rs  main.rs  python.rs  run.rs
src/axiom/: backend.rs  mod.rs
src/axiom/artifacts/: uk-child-benefit-fy2026.json  uk-income-tax-fy2026.json  uk-nics-class-1-fy2026.json  uk-nics-class-4-fy2026.json  uk-pension-credit-fy2026.json  uk-universal-credit-fy2026.json
src/axiom/programs/: uk-child-benefit-fy2026.yaml  uk-income-tax-fy2026.yaml  uk-nics-class-1-fy2026.yaml  uk-nics-class-4-fy2026.yaml  uk-pension-credit-fy2026.yaml
src/data/: calibrate.rs  clean.rs  frs.rs  lcfs.rs  mod.rs  was.rs
src/engine/: axes.rs  branch.rs  dynamics.rs  entities.rs  mod.rs  simulation.rs
src/parameters/: mod.rs  param_tree.rs  tree.rs
src/reforms/: mod.rs  structural.rs
src/variables/: benefits.rs  council_tax.rs  income_tax.rs  labour_supply.rs  mod.rs  wealth_taxes.rs
tests/: parameter_impact.rs
tests/fixtures/parameters/gov/dwp/universal_credit/: standard_allowance.yaml
tests/fixtures/parameters/gov/hmrc/income_tax/: personal_allowance.yaml
tests/fixtures/parameters/gov/hmrc/income_tax/rates/: basic_rate.yaml
tests/fixtures/parameters/gov/indices/: cpi.yaml
tests/fixtures/parameters/gov/revenue_scotland/lbtt/: residential_rate.yaml
tests/policy/: child_benefit.yaml  council_tax.yaml  dla_aa.yaml  income_tax.yaml  national_insurance.yaml  pip.yaml  property_transaction_tax.yaml
