[package]
name = "policyengine-uk-rust"
version = "0.1.0"
edition = "2021"
description = "A high-performance UK tax-benefit microsimulation engine in Rust"

[lib]
name = "policyengine_uk_rust"
crate-type = ["rlib", "cdylib"]

[features]
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"], optional = true }
axiom-rules-engine = { git = "https://github.com/TheAxiomFoundation/axiom-rules-engine", rev = "4a25a10943ff76956dc7cf18306764bbd8eb53a9" }
chrono = "0.4"
rust_decimal = "1.39"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1.3"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
comfy-table = "7"
colored = "2"
anyhow = "1"
smartcore = "0.4"
rand = "0.8"

[build-dependencies]
pyo3-build-config = "0.24"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "branch"
harness = false

[[bench]]
name = "parameter_tree"
harness = false

[[bench]]
name = "reform_neutralise"
harness = false

[[bench]]
name = "cgt_surcharge"
harness = false

[[bench]]
name = "speedtest"
harness = false

[[bench]]
name = "axiom_reform"
harness = false

[[bench]]
name = "axiom_uc"
harness = false

[[bench]]
name = "axiom_nics"
harness = false

[[bench]]
name = "axiom_child_benefit"
harness = false

[[bench]]
name = "axiom_pension_credit"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
