[package]
name = "policyengine-uk-rust"
version = "0.1.0"
edition = "2021"
description = "A high-performance UK tax-benefit microsimulation engine in Rust"

[lib]
name = "policyengine_uk_rust"
crate-type = ["rlib", "cdylib"]

[features]
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"], optional = true }
chrono = "0.4"
rust_decimal = "1.39"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1.3"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
comfy-table = "7"
colored = "2"
anyhow = "1"
smartcore = "0.4"
rand = "0.8"

[build-dependencies]
pyo3-build-config = "0.24"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
