[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "policyengine-uk-compiled"
version = "0.38.0"
description = "Compiled UK tax-benefit microsimulation engine (Rust binary with Python interface)"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "scikit-learn>=1.5",
    "xlrd>=2.0.2",
]

[project.urls]
Repository = "https://github.com/PolicyEngine/policyengine-uk-rust"

[tool.setuptools.packages.find]
where = ["interfaces/python"]
include = ["policyengine_uk_compiled*"]

[tool.setuptools.package-data]
policyengine_uk_compiled = [
    "bin/*",
    "parameters/*.yaml",
    "CLAUDE.md",
    "_native.so",
]

[tool.towncrier]
package = "policyengine_uk_compiled"
package_dir = "interfaces/python"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = ""
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
]
